# bro-fuzzy-hashing

./: CMakeLists.txt  LICENSE  Makefile  README  README.md  configure  configure.plugin  plugin.cmake
.github/workflows/: zeek-matrix.yml  zeek-nightly.yml
cmake/: FindLibFuzzy.cmake  FindSSDeep.cmake  FindTLSH.cmake
plugin/scripts/: __preload__.zeek
plugin/src/: FuzzyHash.cc  FuzzyHash.h  FuzzyHashVal.cc  FuzzyHashVal.h  Plugin.cc  Plugin.h  events.bif  functions.bif
scripts/: __load__.zeek  fuzzy-hash-all-files.zeek
scripts/Bro/SSDeep/: __load__.bro
src/: FuzzyHash.cc  FuzzyHash.h  FuzzyHashVal.cc  FuzzyHashVal.h  Plugin.cc  Plugin.h  SSDeep.cc  SSDeep.h  events.bif  functions.bif
testing/: btest.cfg
testing/Baseline/tests.file-analyzer/: output
testing/Baseline/tests.file-analyzer-incomplete/: output
testing/Baseline/tests.show-plugin/: output
testing/Baseline/tests.tlsh-compare/: output
testing/Baseline/tests.tlsh-conversion/: output
testing/tests/: file-analyzer-incomplete.zeek  file-analyzer-log.zeek  file-analyzer.zeek  functions.zeek  functions_tlsh-bug.zeek  show-plugin.zeek  tlsh-compare.zeek  tlsh-conversion.zeek
testing/traces/: http-get-large.pcap
tests/: btest.cfg
tests/Baseline/scripts.file-analyzer/: output
tests/Baseline/scripts.file-analyzer-incomplete/: output
tests/Baseline/scripts.functions/: output
tests/Baseline/scripts.show-plugin/: output
tests/scripts/: basic.bro  file-analyzer-incomplete.bro  file-analyzer.bro  functions.bro  show-plugin.bro
tests/traces/: http-get-large-incomplete.pcap
